infrastructure/base/policies/allow-ingress-frontend-backend.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-frontend-backend
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: hello
      tier: backend
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app: hello
          tier: frontend
