infrastructure/base/policies/allow-ingress-frontend.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-frontend
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: hello
      tier: frontend  
  ingress:
  - from:
    - namespaceSelector: {}
